Fixing background Alignment, and add smooth scroll

--- a/Live/css/style.less
+++ b/Live/css/style.less
@@ -161,7 +161,7 @@ header {
     position: relative;
     z-index: 9;
     width: 100%;
-    max-width: 1366px;
+    // max-width: 1366px;
     max-height: 100%;
     overflow: hidden;
     margin: auto;
@@ -196,7 +196,7 @@ article{
         height: 1080px;
         // min-height: 148vh;
         width: 100%;
-        max-width: 1366px;
+        // max-width: 1366px;
         position: relative;
         margin: auto;
         overflow: hidden;
@@ -320,7 +320,7 @@ article{
         position: relative;
         z-index: 4;
         width: 100%;
-        max-width: 1366px;
+        // max-width: 1366px;
         height: 958px;
         // overflow: hidden;
         top: 0;
